--- a/src/assets/css/etc.scss
+++ b/src/assets/css/etc.scss
@@ -1,9 +1,99 @@
 @use 'mixins';
-@use 'sprite/icons';
-@use 'sprite/mo_icons';
 @use 'breakpoints';
 
 // etc
 .error {
-	
+	.error__container {
+		max-width: 1600px;
+		margin: 0 auto;
+		padding: 13.02vw 3.37vw;
+		box-sizing: content-box;
+		text-align: center;
+	}
+	.error__case {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		gap: 12px;
+		margin-bottom: 53px;
+		font-weight: 600;
+		font-size: 100px;
+		letter-spacing: -0.02em;
+		.error__type {
+			color: #ffb5d1;
+			font-family: 'Baskerville';
+			font-style: italic;
+			font-size: 114px;
+			-webkit-text-stroke: 1px #000;
+		}
+	}
+	.error__title {
+		margin-bottom: 28px;
+		font-size: 32px;
+		line-height: 42px;
+		@include mixins.PtdSemiBold();
+	}
+	.error__desc {
+		font-size: 18px;
+		line-height: 28px;
+		@include mixins.PtdRegular();
+	}
+
+	.button {
+		&:not(:first-child) {
+			margin-top: 45px;
+		}
+		.button__container {
+			.button__item--large {
+				padding: 0 29px 0 28px;
+				font-size: 28px;
+				letter-spacing: -0.01em;
+				@include mixins.ATm();
+			}
+		}
+	}
+
+	.underline {
+		font-weight: 500;
+		text-decoration: underline;
+	}
+
+	@include breakpoints.mobile() {
+		.error__container {
+			padding: 48.27vw 4vw;
+		}
+		.error__case {
+			gap: 6.5px;
+			margin-bottom: 34.5px;
+			font-size: 56px;
+			letter-spacing: -0.005em;
+			.error__type {
+				font-size: 62px;
+			}
+		}
+		.error__title {
+			margin-bottom: 20px;
+			font-size: 22px;
+			line-height: 21px;
+		}
+		.error__desc {
+			font-size: 14px;
+			line-height: 20px;
+		}
+
+		.button {
+			&:not(:first-child) {
+				margin-top: 30px;
+			}
+			.button__container {
+				.button__item--large {
+					height: 33.5px;
+					padding: 0 18px 0;
+					font-size: 20px;
+					letter-spacing: -0.02em;
+					@include mixins.ATr();
+				}
+			}
+		}
+	}
 }
