--- a/src/assets/css/review_board.scss
+++ b/src/assets/css/review_board.scss
@@ -12,10 +12,13 @@
     .reviewList {
       > ul {
         margin: 0;
+        margin-left: 5px;
       }
     }
     .reviewSearch {
+      width: auto;
       .ctrl {
+        top: 0;
         .btnSearch {
           &:after {
             margin: 0;
@@ -78,4 +81,87 @@
       margin-right: 0;
     }
   }
+
+  .rvwrap__head {
+    position: relative;
+    // width: 100%;
+    height: 44px;
+    margin-bottom: 20px;
+		display: flex;
+    align-items: center;
+		justify-content: space-between;
+    &:after {
+      display: none;
+      // content: '';
+      // display: block;
+      // clear: both;
+      // overflow: hidden;
+    }
+  }
+  select {
+    width: 165px;
+    height: 100%;
+    border: 1px solid #000000;
+    background-color: #ffffff;
+    font-size: 16px;
+    margin: 0 3px;
+  }
+	.search_keyword {
+		input[type=text] {
+			width: 320px;
+			height: 42px;
+			border: 1px solid #000000;
+			background-color: #ffffff;
+			font-size: 16px;
+			margin: 0 3px;
+		}
+	}
+  .head__title {
+    // float: left;
+    display: flex;
+		// flex: 1;
+    height: 100%;
+    align-items: center;
+    font-size: 32px;
+    font-weight: 500;
+  }
+  .head__search {
+    float: left;
+    display: flex;
+    height: 100%;
+    align-items: center;
+    .select {
+      height: 100%;
+    }
+  }
+	.head__result {
+    // float: left;
+    display: flex;
+    height: 100%;
+    align-items: center;
+		> p {
+			display: flex;
+			align-items: center;
+			font-size: 18px;
+			margin:0 15px;
+			span {
+				margin-left: 9px;
+				font-size: inherit;
+				@include mixins.PtdMedium();
+			}
+		}
+		i {
+			display: inline-block;
+			margin-right: 9px;
+		}
+	}
+	.ico_boardset {
+		@include icons.retina-sprite(icons.$ico_boardset-group);
+	}
+	.ico_likecnt {
+		@include icons.retina-sprite(icons.$ico_like_on-group);
+	}
+	.ico_reviewcnt {
+		@include icons.retina-sprite(icons.$ico_reviewcnt-group);
+	}
 }
