--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -29,6 +29,9 @@
 		margin-top: -3px;
 		@include icons.retina-sprite(icons.$bg-select-group);
 	}
+	select {
+		background-image: none;
+	}
 }
 .select--sorting {
 	min-width: 110px;
