상품, 아카이브, 주문 css

--- a/src/assets/css/_menu.scss
+++ b/src/assets/css/_menu.scss
@@ -27,7 +27,7 @@
 		position: relative;
 		padding-top: 40.63vw;
 		clip-path: inset(0 round 72px);
-		> .menu__inner {
+		.menu__inner {
 			position: absolute;
 			left: 0;
 			top: 0;
