--- a/src/assets/css/order.scss
+++ b/src/assets/css/order.scss
@@ -41,6 +41,7 @@ width: 100%;
     font-size: 14px;
     border: 1px solid #000000;
     border-radius: 25px;
+    color:#000000;
     &.btn_delete {
       width: 70px;
     }
