--- a/src/assets/css/archive.scss
+++ b/src/assets/css/archive.scss
@@ -29,6 +29,21 @@
 			letter-spacing: -0.02em;
 			@include mixins.ATr();
 		}
+		.menu__inner {
+			.menu__inner {
+				position: relative;
+				height: 100%;
+				img {
+					position: absolute;
+					top: 50%;
+					left: 50%;
+					@include mixins.transform(translate(-50%, -50%));
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				} 
+			}
+		}
 	}
 
 	@include breakpoints.mobile() {
