--- a/src/assets/css/cart.scss
+++ b/src/assets/css/cart.scss
@@ -46,6 +46,7 @@ width: 100%;
       padding: 0;
       font-size: 60px;
       font-weight: 500;
+      color:#000000;
     }
     .ico__shipp {
       @include icons.retina-sprite(icons.$ico-shipp-group);
@@ -59,6 +60,14 @@ width: 100%;
       }
       .ico__shipp {
         @include mixins.sprite(mo_icons.$ico-shipp);
+      }
+    }
+  }
+  .ec-base-button {
+    a {
+      &:hover {
+        background-color: #000000;
+        color:#ffffff;
       }
     }
   }
@@ -84,7 +93,7 @@ width: 100%;
       .tab_moreinfo {
         position: absolute;
         top: inherit;
-        right: 0;
+        right: 5px;
         bottom: 0;
       }
       .ico__shipp {
@@ -105,6 +114,7 @@ width: 100%;
             font-size: 24px;
             color: #999999;
             background: none;
+            @include mixins.PtdRegular();
           }
         }
         li.selected {
@@ -133,7 +143,9 @@ width: 100%;
       }
     }
   }
-
+  .xans-order-totalorder {
+    margin-top: 0;
+  }
   @include breakpoints.mobile() {
     padding-left: 10px;
     padding-right: 10px;
@@ -181,9 +193,10 @@ width: 100%;
         border-bottom: 0;
         tr {
           position: relative;
-          height: 185px;
+          height: auto;
           td {
             padding-left: 50%;
+            font-size: 12px;
             &:first-child {
               position: absolute;
               left: 0;
@@ -219,15 +232,19 @@ width: 100%;
   }
   .ec-base-table thead th {
     border: 0 !important;
+    font-weight: 500;
   }
   .ec-base-table.typeList td {
     padding: 0;
-    font-family: "Pretendard Variable", -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
-    font-weight: 500;
-    font-size: 12px;
+    @include mixins.PtdMedium();
+    font-size: 18px;
     border: 0;
+    color:#000000;
     * {
-      font-size: inherit;
+      color: inherit;
+    }
+    .xans-order-optionall {
+      font-size: 14px;
     }
   }
   .ec-base-table.typeList tfoot {
@@ -239,6 +256,7 @@ width: 100%;
       color:#000000;
       > div {
         color: #000000;
+        font-size: 14px;
       }
     }
     .xans-order-selectorder {
@@ -403,6 +421,7 @@ width: 100%;
     > dt {
       margin-bottom: 40px;
       font-size: 24px;
+      font-weight: 500;
     }
     > dd {
       text-align: right
@@ -420,6 +439,9 @@ width: 100%;
   .area_delv_dl {
     display: flex;
     justify-content: space-between;
+    dt {
+      font-weight: 600;
+    }
   }
   @include breakpoints.mobile() {
     padding: 25px 16px;
@@ -471,6 +493,10 @@ width: 100%;
       padding-left: 10px;
       height: 32px;
       font-size: 13px;
+      &:hover {
+        background-color: #000000;
+        color:#ffffff;
+      }
     }
   }
   .totalorder_button {
@@ -508,9 +534,11 @@ div.ec-base-help.ec-base-help_new {
   }
   > h3 {
     font-size: 24px;   
+    font-weight: 500;
   }
   h4 {
-    font-size: 16px;   
+    font-size: 16px;
+    font-weight: 700;
   }
   ol {
     margin: 15px 0 0 3px;
@@ -518,9 +546,16 @@ div.ec-base-help.ec-base-help_new {
       background: none;
       padding: 0;
       margin-bottom: 5px;
+      color:#000000;
     }
   }
   .inner {width: 100%; margin: 0;margin-top: 25px;}
+  .num {
+    display: inline-flex;
+    width:12px; 
+    justify-content: center;
+    @include mixins.PtdRegular();
+  }
 
   @include breakpoints.mobile() {
     width: calc(100% - 20px);
@@ -534,9 +569,6 @@ div.ec-base-help.ec-base-help_new {
     .inner {
       padding: 0;
       margin-top: 20px;
-    }
-    h4 {
-      font-weight: 500;
     }
     ol {
       li {
