--- a/src/assets/css/member.scss
+++ b/src/assets/css/member.scss
@@ -16,6 +16,7 @@
 	input[type='radio'] {
 		width: 15px;
 		height: 15px;
+		flex-shrink: 0;
 		&:before,
 		&:after {
 			display: none;
@@ -25,6 +26,7 @@
 		margin-right: 5px;
 		border: 1px solid #000;
 		& + label {
+			padding-left: 5px;
 			margin-right: 15px;
 			font-size: 14px;
 			&:last-child {
