--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -487,7 +487,7 @@
         top: 50%;
         left: 50%;
         width: 100%;
-        height: 100%;
+        // height: 100%;
         @include mixins.translate(-50%, -50%);
         object-fit: cover;
       }
@@ -2314,6 +2314,9 @@
 }
 
 .detail_info #totalProducts {
+  table {
+    table-layout: inherit;
+  }
   colgroup {display: none;}
   tfoot {
     border-top: 1px solid #000000;
